--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,8 +1,9 @@
 {
   "name": "ballin",
-  "app_id": "9eb32d25",
-  "type": "ionic-angular",
   "integrations": {
     "cordova": {}
-  }
+  },
+  "type": "ionic-angular",
+  "pro_id": "9eb32d25",
+  "app_id": ""
 }
