--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/storage": "2.1.3",
+    "@ultimate/ngxerrors": "^1.4.0",
+    "angularfire2": "^5.0.0-rc.11",
     "cordova-plugin-geolocation": "^4.0.1",
+    "firebase": "^5.3.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -33,7 +36,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.11",
+    "@ionic/app-scripts": "^3.1.11",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
